--- a/application/doitsu_technology_website/dtech_csr/package.json
+++ b/application/doitsu_technology_website/dtech_csr/package.json
@@ -7,9 +7,6 @@
   "author": "Doitsu Technology",
   "license": "ISC",
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.6",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/container-queries": "^0.1.1"
+    "@material-tailwind/html": "^2.0.0"
   }
 }
