--- a/application/doitsu_technology_website/dtech_csr/Cargo.toml
+++ b/application/doitsu_technology_website/dtech_csr/Cargo.toml
@@ -15,6 +15,8 @@ gloo = "0.10.0"
 wasm-logger = "0.2.0"
 instant = { version = "0.1.12", features = ["wasm-bindgen"] }
 once_cell = "1.18.0"
+wasm-bindgen = "0.2.88"
+web-sys = { version = "0.3.65" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.2", features = ["js"] }
